--- a/project.yaml
+++ b/project.yaml
@@ -10,7 +10,7 @@ network:
   endpoint: wss://westend.api.onfinality.io/public-ws
 dataSources:
   - kind: substrate/Runtime
-    startBlock: 8901053
+    startBlock: 1
     mapping:
       file: ./dist/index.js
       handlers:
@@ -19,3 +19,5 @@ dataSources:
           filter:
             module: balances
             method: Transfer
+        - handler: handleFailedTransfers
+          kind: substrate/CallHandler
